Remove unnecessary options given to JavaDoc.